tests/fail/missing_trait_regex.stderr
error[E0277]: the trait bound `NoRegex: RegexRepresentation` is not satisfied
  --> $DIR/missing_trait_regex.rs:11:32
   |
11 |     sscanf::scanf!("hi", "{}", NoRegex);
   |                                ^^^^^^^ the trait `RegexRepresentation` is not implemented for `NoRegex`

error[E0277]: the trait bound `Vec<usize>: RegexRepresentation` is not satisfied
  --> $DIR/missing_trait_regex.rs:10:32
   |
10 |     sscanf::scanf!("hi", "{}", std::vec::Vec<usize>);
   |                                ^^^^^^^^^^^^^^^^^^^^ the trait `RegexRepresentation` is not implemented for `Vec<usize>`
